# OpenGl-Profe-Sanchez14

./: .gitignore  CMakeLists.txt  readme.md
shaders/: fragment_shader.frag  sprite.frag  vertex_shader.vert
src/: EndScene.h  FallingObject.cpp  FallingObject.h  GameObject.h  GameScene.cpp  GameScene.h  Player.cpp  Player.h  Scene.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  StartScene.cpp  StartScene.h  Texture.cpp  Texture.h  elshaders.cpp  game.h  main.cpp
